dropshot/tests/fail/bad_endpoint2.stderr
error: Expected a non-receiver argument
Try using the following endpoint format:
    async fn my_endpoint(
        rqctx: std::sync::Arc<dropshot::RequestContext<MyContext>>,
        [query_params: Query<Q>,]
        [path_params: Path<P>,]
        [body_param: TypedBody<J>,]
    ) -> Result<HttpResponse*, HttpError>
  --> $DIR/bad_endpoint2.rs:13:23
   |
13 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   |                       ^^^^
